Troubleshooting 100vh issue on mobile.

--- a/theme/global.css
+++ b/theme/global.css
@@ -1,8 +1,12 @@
 #__next {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
   overscroll-behavior: none;
+}
+
+html, body {
+  height: 100% !important;
 }
 
 ._aI {
@@ -42,24 +46,3 @@
     -webkit-animation: dash 1.75s linear 0s forwards infinite;
             animation: dash 1.75s linear 0s forwards infinite;
   }
-
-@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
-    body, .home-stone {                           
-        height: 1024px;                         
-    }                       
-}   
-                                            
-/* iPad with landscape orientation. */                       
-@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape) {                         
-    body, .home-stone {                           
-        height: 768px;                         
-    }                       
-}
-                                               
-/* iPhone 5 
-You can also target devices with aspect ratio. */
-@media screen and (device-aspect-ratio: 40/71) {                              
-    body, .home-stone {                           
-        height: 500px;                         
-    }                       
-}
